crates/djls-python/tests/snapshots/corpus__repos__linkding__bookmarks__templatetags__bookmarks.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "bookmarks.templatetags.bookmarks::tag::bookmark_search":
    arg_constraints:
      - Min: 2
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: search
        required: true
        kind: Variable
        position: 0
      - name: mode
        required: false
        kind: Variable
        position: 1
    supports_as_var: false
filter_arities: {}
block_specs: {}
