crates/djls-python/tests/snapshots/corpus__repos__linkding__bookmarks__templatetags__shared.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "bookmarks.templatetags.shared::tag::formfield":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: field
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
  "bookmarks.templatetags.shared::tag::formhelp":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: field_var
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
  "bookmarks.templatetags.shared::tag::formlabel":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: field
        required: true
        kind: Variable
        position: 0
      - name: label_text
        required: true
        kind: Variable
        position: 1
    supports_as_var: true
  "bookmarks.templatetags.shared::tag::markdown":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: markdown_text
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
filter_arities:
  "bookmarks.templatetags.shared::filter::first_char":
    expects_arg: false
    arg_optional: false
  "bookmarks.templatetags.shared::filter::humanize_absolute_date":
    expects_arg: false
    arg_optional: false
  "bookmarks.templatetags.shared::filter::humanize_relative_date":
    expects_arg: false
    arg_optional: false
  "bookmarks.templatetags.shared::filter::model_to_dict":
    expects_arg: false
    arg_optional: false
  "bookmarks.templatetags.shared::filter::remaining_chars":
    expects_arg: true
    arg_optional: false
block_specs:
  "bookmarks.templatetags.shared::tag::formhelp":
    end_tag: endformhelp
    intermediates: []
    opaque: false
  "bookmarks.templatetags.shared::tag::htmlmin":
    end_tag: endhtmlmin
    intermediates: []
    opaque: false
